fix spacing issues in alefba

--- a/src/alefba-src/src/App.scss
+++ b/src/alefba-src/src/App.scss
@@ -37,7 +37,7 @@
 }
 
 #usage-utils-space {
-    height: min(104vw, 428px);
+    height: max(40vw, 310px);
 }
 
 #abilities-usage-space {
